index route connected

--- a/views/hikes/index.ejs
+++ b/views/hikes/index.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hike Index</title>
 </head>
-<body>
-    
+<body style = text-align:center;color:rgb(24,70,24);>
+    <h1>Welcome to Hikes Around The World!</h1>
+
 </body>
 </html>
