post route and show route

--- a/views/hikes/index.ejs
+++ b/views/hikes/index.ejs
@@ -14,7 +14,7 @@
                     <%= hikes[i].name %>
                 </a> 
             </li>
-            <a href="/hikes/<%=i; %>/edit">Edit</a>
+            <a href="/hikes/<%= hikes[i]._id %>/edit">Edit</a>
        <% } %>
     </ul>
 </body>
