--- a/views/hikes/new.ejs
+++ b/views/hikes/new.ejs
@@ -6,9 +6,9 @@
     <title>Add Hike</title>
 </head>
 <body style = text-align:center;color:rgb(133,22,41);>
-        <h1>ADD A HIKE!</h1>
+    <h1>ADD A HIKE!</h1>
         <main>
-            <form action="/hikes" method="POST"></form>
+        <form action="/hikes" method="POST">
             <div style= margin-top:20px;padding-right:37px>
                 <label for="name">Hike Name:</label>
                 <input type="text" id="name" name="name">
@@ -19,7 +19,7 @@
             </div>
             <div style= margin-top:20px;padding-right:50px>
                 <label for="LengthInMiles">LengthInMiles</label>
-                <input type="number" id="LengthInMiles" name="LengthInMiles">
+                <input type="number" id="lengthInMiles" name="LengthInMiles">
             </div>
             <div style= margin-top:20px;padding-right:21px>
                 <label for="difficulty">Difficulty:</label>
@@ -27,6 +27,7 @@
             </div>
             <button style=margin-top:20px; type="submit">Add Hike</button>
         </main>
+    </form>
 </body>
     
 </html>
