post route/redirect working but not showing up

--- a/views/hikes/index.ejs
+++ b/views/hikes/index.ejs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hike Index</title>
 </head>
-<body style = text-align:center;color:rgb(24,70,24);>
+<body <!-- style = text-align:center;color:rgb(24,70,24); -->>
     <h1>Welcome to Hikes Around The World!</h1>
     <ul>
         <% for (let i = 0; i < hikes.length; i++) { %>
             <li style="margin-bottom: 20px;">
-                <a href="/hikes/<%= hikes[i]._id %> ">
+                <a href="/hikes/<%= hikes[i]._id %>">
                     <%= hikes[i].name %>
                 </a> 
             </li>
