--- a/views/hikes/show.ejs
+++ b/views/hikes/show.ejs
@@ -8,13 +8,12 @@
 <body style = text-align:center;color:rgb(133,22,41);>
         <h1>Information</h1>
         <main>
-          <form action="/hikes/<%= hikes[i]._id %>" method="POST">
             <div style= margin-top:20px;padding-right:37px>
-                Name:<p><%= hikes.name %></p>
+                Name:<p><%= hikes.name: %></p>
             </div>
 
             <div style= margin-top:20px;padding-right:37px>
-                Location:<p><%= hikes.location %></p>
+                Location:<p><%= hikes.location: %></p>
             </div>
   
             <div style= margin-top:20px;padding-right:37px>
@@ -24,10 +23,8 @@
             <div style= margin-top:20px;padding-right:37px>
                 Name:<p><%= hikes.difficulty %> </p>
             </div>
-
-          </form>
           <form action="/hikes/<%= hike._id %>?_method=DELETE" method="POST">
-            <input style=margin-top:20px; type="submit" value="Delete" />
+            <input style=margin-top:20px; type="submit" value="Delete Hike" />
           </form>
         </main>
 </body>
