post route and show route

--- a/views/hikes/new.ejs
+++ b/views/hikes/new.ejs
@@ -11,11 +11,11 @@
         <form action="/hikes" method="POST">
             <div style= margin-top:20px;padding-right:37px>
                 <label for="name">Hike Name:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="Name">
             </div>
             <div style= margin-top:20px;padding-right:21px>
             <label for="location">Location:</label>
-            <input type="text" id="location" name="location">
+            <input type="text" id="location" name="Location">
             </div>
             <div style= margin-top:20px;padding-right:50px>
                 <label for="LengthInMiles">LengthInMiles</label>
@@ -23,7 +23,7 @@
             </div>
             <div style= margin-top:20px;padding-right:21px>
                 <label for="difficulty">Difficulty:</label>
-                <input type="text" id="difficulty" name="difficulty">
+                <input type="text" id="difficulty" name="Difficulty">
             </div>
             <button style=margin-top:20px; type="submit">Add Hike</button>
         </main>
