put route working

--- a/views/hikes/edit.ejs
+++ b/views/hikes/edit.ejs
@@ -20,8 +20,8 @@
             </div>
   
             <div style= "margin-top:20px;padding-right:37px">
-                <label for="lengthInMiles">LengthInMiles</label>
-                <input type="text" name="LengthInMiles" value="<%= hike.LengthInMiles %>"/><br/><br/>
+                <label for="lengthInMiles">LengthInMiles:</label>
+                <input type="number" name="LengthInMiles" value="<%= hike.LengthInMiles %>"/><br/><br/>
             </div>
 
             <div style= "margin-top:20px;padding-right:37px">
