--- a/views/hikes/index.ejs
+++ b/views/hikes/index.ejs
@@ -7,6 +7,7 @@
     <title>Hike Index</title>
 </head>
 <body style="color:rgb(24,70,24);">
+    <%- include('../nav') %>
     <h1>Welcome to Hikes Around The World!</h1>
     <ul>
         <% for (let i = 0; i < hikes.length; i++) { %>
