--- a/views/hikes/new.ejs
+++ b/views/hikes/new.ejs
@@ -6,6 +6,7 @@
     <title>Add Hike</title>
 </head>
 <body style = text-align:center;color:rgb(133,22,41);>
+    <%- include('../nav') %>
     <h1>ADD A HIKE!</h1>
         <main>
         <form action="/hikes" method="POST">
