--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include('nav') %>
     <title>Hikes Around The WORLD</title>
 </head>
 <body style = text-align:center;color:purple;>
