--- a/views/hikes/index.ejs
+++ b/views/hikes/index.ejs
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hike Index</title>
 </head>
-<body style="color:rgb(24,70,24);">
+<body style = text-align:center;color:rgb(30,100,102);>
     <%- include('../nav') %>
     <h1>Welcome to Hikes Around The World!</h1>
     <ul>
         <% for (let i = 0; i < hikes.length; i++) { %>
-            <li style="margin-bottom: 20px;">
+            <li style="display:inline-block; margin-bottom:20px;">
                 <a href="/hikes/<%= hikes[i]._id %>">
                     <%= hikes[i].Name %>
                 </a> 
             </li>
-            <a href="/hikes/<%= hikes[i]._id %>/edit">Edit</a>
+            <a style="padding:20px;" href="/hikes/<%= hikes[i]._id %>/edit">Edit</a>
        <% } %>
     </ul>
 </body>
